# qt_test

LibFA64/: CMakeLists.txt  README.md
LibFA64/include/: LibFA.h
LibFA64/src/: analysis_bridge.cpp  extra_info.cpp  extra_info.h  face_detect.cpp  libfa_api.cpp  libfa_compat.h  libfa_internal.h
LibFA64_demo/: CMakeLists.txt  README.md  main.cpp  run_demo.bat
MMCameraCtrl/: MMCameraCtrl.sln
MMCameraCtrl/MMCameraCtrl/: AigoCamera.cpp  AigoCamera.h  CameraBase.cpp  CameraBase.h  CanonEDSCamera.cpp  CanonEDSCamera.h  CanonEDSUILock.h  GdiplusInit.h  IControler.h  MMCameraCtrl.cpp  MMCameraCtrl.vcxproj  MMCameraCtrl2.cpp  SocketServer.cpp  SocketServer.h  USBControler.cpp  USBControler.h  Util.cpp  Util.h  copy.bat  kzdsc.h  pch.h  protocol_common.h
MMCameraCtrl/MMCameraCtrl/lib/: dllProc.h  dllProc.lib
test64bit/: AnalyseManager.cpp  AnalyseManager.h  AppConfig.h  BackupManager.cpp  BackupManager.h  BaseDrawingItem.cpp  BaseDrawingItem.h  CMakeLists.txt  CameraImageProvider.h  CaptureFlow.cpp  CaptureFlow.h  CustomerManager.cpp  CustomerManager.h  CustomerReportManager.cpp  CustomerReportManager.h  FaceAnalyseManager.cpp  FaceAnalyseManager.h  FaceContourMath.cpp  FaceContourMath.h  FlowBase.cpp  FlowBase.h  ImageEditor.cpp  ImageEditor.h  MM3DManager.cpp  MM3DManager.h  MMLogger.cpp  MMLogger.h  MM_Const_Define.h  PreRecordManager.cpp  PreRecordManager.h  PrintHelper.cpp  PrintHelper.h  SocketWorker.cpp  SocketWorker.h  StartPreviewFlow.cpp  StartPreviewFlow.h  appconfig.cpp  appdb.cpp  appdb.h  cameraclient.cpp  (+7 more)
test64bit/QMLContent/: App.qml  AppStyle.qml  BackupAndRestore.qml  CameraCtrl.qml  CameraDlg.qml  CameraView.qml  CustomerAnalyse2.qml  CustomerEditDialog.qml  MM3DViewer.qml  MMImageEditor.qml  OfferingPickerDialog.qml  PreRecordDialog.qml  RunPreRecord.qml  TestDlg.qml  customerAnalyse.qml  customerAnalyse3.qml  customerManager.qml  customerReport.qml  logo.qml  morph_blend.frag  morph_blend.vert  morph_blend_lit.frag  morph_blend_unlit.frag  run.bat  testWindow.qml  testWindow2.qml
test64bit/QMLContent/components/: CheckButton.qml  DateField.qml  DatePicker.qml  IconButton.qml  InputFunnelBlocker.qml  LegendItem.qml  LogoButton.qml  MMCheckBox.qml  MMRadioButton.qml  MessageBox.qml  ModalChoicePanel.qml  ModeIcon.qml  MyButton2.qml  TextButton.qml  calendar.mjs  convenience.mjs
test64bit/design_doc/: LibFA64_customerAnalyse_integration.md  README.md  group_contour_storage.md  implementation_checklist.md
test64bit/init_files/: MMFace_.db  MMFace_.json  init.sql  init_db.py
test64bit/libs/: copyModules.bat  dllProc.h  dllProc.lib
test64bit/shaders/: magnifier_glass.frag
